@@ -143,9 +143,9 @@
 <DT>
 <IMG ALT="o" SRC=icon2.gif>inline   unsigned char* <B>data</B>(int column, int row=0, int image=0) const 
 <DT>
-<IMG ALT="o" SRC=icon2.gif>void <B>flipHorizontal</B>(int image=0)
+<IMG ALT="o" SRC=icon2.gif>void <B>flipHorizontal</B>()
 <DT>
-<IMG ALT="o" SRC=icon2.gif>void <B>flipVertical</B>(int image=0)
+<IMG ALT="o" SRC=icon2.gif>void <B>flipVertical</B>()
 <DT>
 <IMG ALT="o" SRC=icon2.gif>void <B>ensureValidSizeForTexturing</B>(GLint <!1><A HREF="Extensions.5.html#DOC.2.240.57.26">maxTextureSize</A>)
 <DT>
@@ -172,8 +172,6 @@
 <IMG ALT="o" SRC=icon2.gif>inline   void <B>setMipmapData</B>(const <!1><A HREF="Image.html#DOC.2.119.49">MipmapDataType</A>&amp; mipmapDataVector)
 <DT>
 <IMG ALT="o" SRC=icon2.gif>inline   unsigned char* <B>getMipmapData</B>(unsigned int mipmapNumber) const 
-<DT>
-<IMG ALT="o" SRC=icon2.gif>void <B>computeMipMaps</B>()
 <DT>
 <IMG ALT="o" SRC=icon2.gif>bool <B>isImageTranslucent</B>() const 
 </DL></P>
